# aocl-utils

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  License.txt  NOTICES.txt  README.md  Readme.md  SupportedPackageMatrix.md  version.txt
CMake/: FindSphinx.cmake  aocl-utils.pc.in  au_compiler_msvc.cmake  au_compiler_unix.cmake  au_examples.cmake  au_features.cmake  au_find_gtest.cmake  au_functions.cmake  au_git_hash.cmake  au_helpers.cmake  au_install.cmake  au_lib.cmake  au_options.cmake  au_project.cmake  au_unit_tests.cmake  au_variables.cmake  au_version.cmake
CMake/Presets/: Base.json  Default.json  Project.json  x64-linux-gcc.json  x64-linux-llvm.json
Docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
SDK/: CMakeLists.txt
SDK/CMake/: af_examples.cmake
SDK/Examples/: CMakeLists.txt  Readme.md  base64_example.cc  cpuid_all_flags_example.cc  cpuid_deprecated_api_example.cc  cpuid_example.cc  logger_demo.cc  thread_pinning_example.cc
SDK/Examples/capi/: CMakeLists.txt  cpuid_deprecated_api_example.c  cpuid_example.c  cpuid_example.cc  logger_demo.c  thread_pinning_example_linux.c  thread_pinning_example_windows.c  version_example.c
Tests/: CMakeLists.txt  Dockerfile  README.md  build_sanity_test.py  build_sanity_test.sh  environ_tests.cc
Tests/build_sanity_tests/: Readme.md  build_sanity_test.py  build_sanity_test.sh
doc/adr/: 0001-fix-minimum-compiler-version.md  (+2 more)
docs/: CMakeLists.html  CMakeLists.txt  Doxyfile.in  ReleaseNotes.md  SupportedPackageMatrix.md  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/.doctrees/: CMakeLists.doctree  environment.pickle  index.doctree
docs/.doctrees/cpuid/api/: index.doctree  utils_capis.doctree  utils_cppapis.doctree
docs/.doctrees/cpuid/howto/: index.doctree
docs/.doctrees/cpuid/testing/: index.doctree  utils_testplan.doctree
docs/.doctrees/threadpinning/api/: index.doctree  tp_capis.doctree  tp_cppapis.doctree
docs/.doctrees/threadpinning/testing/: index.doctree  tp_testplan.doctree
docs/.doctrees/utils/howto/: index.doctree  utils_readme.doctree
docs/.doctrees/utils/support_matrix/: index.doctree  supported_package_version.doctree
docs/.doxygen/: Doxyfile
docs/_sources/cpuid/api/: utils_cppapis.rst.txt
docs/_sources/cpuid/testing/: utils_testplan.rst.txt
docs/_sources/threadpinning/api/: tp_capis.rst.txt
docs/_sources/threadpinning/testing/: tp_testplan.rst.txt
docs/_sources/utils/support_matrix/: index.rst.txt  supported_package_version.rst.txt
docs/_static/: basic.css
docs/_template/flavors/local/: footer.jinja  header.jinja
docs/_template_fallback/flavors/local/: header.jinja
docs/cpuid/api/: index.html  utils_capis.html
docs/cpuid/howto/: utils_readme.html
docs/cpuid/testing/: index.html  utils_testplan.html
docs/doxygen/: BUILD.md  Doxyfile  README.md  footer.html
docs/root/cpuid/api/: capi_summary.md  cppapi_summary.md  index.rst  utils_capis.rst  utils_cppapis.rst
docs/root/cpuid/testing/: index.rst  utils_testplan.rst
docs/root/logger/api/: index.rst  logger_capis.rst  logger_cppapis.rst  logging_intro.md
docs/root/status/api/: index.rst  status_cppapi.rst  status_intro.md
docs/root/threadpinning/api/: index.rst  tp_cppapis.rst
docs/root/threadpinning/testing/: index.rst  tp_testplan.rst
docs/root/utils/howto/: index.rst  utils_readme.rst
docs/root/utils/support_matrix/: index.rst  supported_package_version.rst
docs/sphinx/_build/html/: .buildinfo  404.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/sphinx/_build/html/.doctrees/: index.doctree
docs/sphinx/_build/html/.doctrees/adr/: 0001-fix-minimum-compiler-version.doctree  0002-create-backward-compatibility-layer.doctree  readme.doctree
docs/sphinx/_build/html/.doctrees/root/cpuid/api/: index.doctree  utils_capis.doctree  utils_cppapis.doctree
docs/sphinx/_build/html/.doctrees/root/cpuid/testing/: index.doctree  utils_testplan.doctree
docs/sphinx/_build/html/.doctrees/root/threadpinning/api/: index.doctree  tp_capis.doctree  tp_cppapis.doctree
docs/sphinx/_build/html/.doctrees/root/threadpinning/testing/: index.doctree  tp_testplan.doctree
docs/sphinx/_build/html/.doctrees/root/utils/howto/: index.doctree  utils_readme.doctree
docs/sphinx/_build/html/.doctrees/root/utils/support_matrix/: index.doctree  supported_package_version.doctree
docs/sphinx/_build/html/.doctrees/sphinx/_build/html/_static/scripts/: bootstrap.js.LICENSE.doctree
docs/sphinx/_build/html/_sources/adr/: 0002-create-backward-compatibility-layer.md
docs/sphinx/_build/html/_sources/root/cpuid/api/: index.rst
docs/sphinx/_build/html/_sources/root/threadpinning/testing/: index.rst
docs/sphinx/_build/html/_sources/root/utils/howto/: utils_readme.rst
docs/sphinx/_build/html/_static/: basic.css  copybutton.js  documentation_options.js
docs/sphinx/_build/html/adr/: 0001-fix-minimum-compiler-version.html  0002-create-backward-compatibility-layer.html  readme.html
docs/sphinx/_build/html/root/cpuid/api/: index.html  utils_capis.html  utils_cppapis.html
docs/sphinx/_build/html/root/cpuid/testing/: index.html  utils_testplan.html
docs/sphinx/_build/html/root/threadpinning/api/: index.html  tp_capis.html  tp_cppapis.html
docs/sphinx/_build/html/root/threadpinning/testing/: index.html  tp_testplan.html
docs/sphinx/_build/html/root/utils/howto/: index.html  utils_readme.html
docs/sphinx/_build/html/root/utils/support_matrix/: index.html  supported_package_version.html
docs/sphinx/_build/html/sphinx/_build/html/_static/scripts/: bootstrap.js.LICENSE.html
docs/threadpinning/api/: index.html  tp_capis.html  tp_cppapis.html
docs/threadpinning/testing/: index.html  tp_testplan.html
docs/utils/howto/: index.html  utils_readme.html
docs/utils/support_matrix/: index.html  supported_package_versino.html  supported_package_version.html
lib/: CMakeLists.txt  cache.cc  cpu.cc  cpuidrawdata.cc  ostream.cc
lib/capi/: c_arch.cc  c_cache.cc  c_error.cc
(+144 files in other folders)
